# reddit-email-report

./: LICENSE  pyproject.toml
reddit_email_report/: gmail.py
