[tool.poetry]
name = "reddit-email-report"
version = "0.1.0"
description = "Automatically send email of top weekly reddit articles"
authors = ["Alec Gillis"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
